WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301954
Safari may crash when signing in on visionOS
https://bugs.webkit.org/show_bug.cgi?id=301954
Summary
Safari may crash when signing in on visionOS
Garrett Davidson
Reported
2025-11-04 11:43:36 PST
When signing in on a website that uses passkeys on visionOS, Safari may crash
Attachments
Add attachment
proposed patch, testcase, etc.
Garrett Davidson
Comment 1
2025-11-04 11:43:37 PST
<
rdar://problem/163973546
>
Garrett Davidson
Comment 2
2025-11-04 11:45:37 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53411
EWS
Comment 3
2025-11-05 11:39:54 PST
Committed
302600@main
(43cf71441cc9): <
https://commits.webkit.org/302600@main
> Reviewed commits have been landed. Closing PR #53411 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug