Safari may crash when signing in on visionOS https://bugs.webkit.org/show_bug.cgi?id=301954 rdar://163973546

Reviewed by Aditya Keerthi.

This class isn't available on visionOS, so we should skip this check here. We didn't catch this
earlier because it is forward declared and softlinked. These macros match the implementation of
this class.

* Source/WTF/wtf/PlatformHave.h:
* Source/WebKit/UIProcess/WebAuthentication/Cocoa/WebAuthenticatorCoordinatorProxy.mm:

Canonical link: https://commits.webkit.org/302600@main